syntax = "proto3";

package proto;
option go_package = "./;proto";

import "AvatarInfo.proto";

// CmdId: 1757
// EnetChannelId: 0
// EnetIsReliable: true
message AvatarAddNotify {
  AvatarInfo avatar = 11;
  bool is_in_team = 15;
}
