syntax = "proto3";

package proto;
option go_package = "./;proto";

import "SceneEntityInfo.proto";

message AvatarChangeCostumeNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 1724;
  }

  SceneEntityInfo entity_info = 1;
}
