syntax = "proto3";

package proto;
option go_package = "./;proto";

// CmdId: 1734
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message AvatarChangeCostumeReq {
  uint64 avatar_guid = 7;
  uint32 costume_id = 8;
}
