syntax = "proto3";

package proto;
option go_package = "./;proto";


message AvatarPropNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 1212;
  }

  uint64 avatar_guid = 1;
  map<uint32, int64> prop_map = 2;
}
