syntax = "proto3";

package proto;
option go_package = "./;proto";


message AvatarUnlockTalentNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 1089;
  }

  uint64 avatar_guid = 1;
  uint32 entity_id = 2;
  uint32 talent_id = 3;
  uint32 skill_depot_id = 4;
}
