syntax = "proto3";

package proto;
option go_package = "./;proto";


message AvatarWearFlycloakReq {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    IS_ALLOW_CLIENT = 1;
    CMD_ID = 1728;
  }

  uint64 avatar_guid = 11;
  uint32 flycloak_id = 9;
}
