syntax = "proto3";

package proto;
option go_package = "./;proto";


message AvatarWearFlycloakRsp {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 1770;
  }

  int32 retcode = 13;
  uint64 avatar_guid = 8;
  uint32 flycloak_id = 2;
}
