syntax = "proto3";

package proto;
option go_package = "./;proto";

message ProfilePicture {
  uint32 avatar_id = 1;
  uint32 costume_id = 2;
}
