syntax = "proto3";

package proto;
option go_package = "./;proto";

message WidgetGadgetData {
  uint32 gadget_id = 13;
  repeated uint32 gadget_entity_id_list = 5;
}
